# colorchecker

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
colorchecker/: requirements.txt
colorchecker/src/: main.py
colorchecker/src/camera/: capture.py
colorchecker/src/leds/: led_controller.py
colorchecker/src/processing/: converter.py
colorchecker/src/ui_web/static/css/: styles.css
data/: color_references.json
src/buttons/: buttons.py
src/camera/: capture.py
src/config/: settings.py
src/db/: loader.py
src/oled/: oled_driver.py
src/processing/: calibrate.py  matcher.py  pipeline.py  preprocessing.py
src/ui_web/: server.py
src/ui_web/static/css/: styles.css
src/ui_web/static/js/: app.js
src/ui_web/templates/: index.html
